# lnshop

./: .gitignore  Dockerfile  README.md  build_dockerfile.sh  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
config/: nginx.conf
mysite/: db.sqlite3
mysite/mysite/: asgi.py  settings.py  urls.py
mysite/shop/: admin.py  apps.py  connection.py  filters.py  jobs.py  middleware.py  models.py  serializers.py  urls.py  views.py
mysite/shop/migrations/: 0001_initial.py  0002_auto_20200803_1751.py  0003_auto_20200803_1754.py  0004_auto_20200803_1756.py  0005_auto_20200803_2256.py  0006_auto_20200803_2303.py  0007_auto_20200804_1812.py  0008_auto_20200804_2140.py  0009_auto_20200805_1639.py  0010_auto_20200805_1811.py  0011_auto_20200805_1811.py  0012_auto_20200810_1446.py  0013_auto_20200810_1554.py  0014_auto_20200908_2219.py  0015_auto_20200909_2319.py  0016_auto_20210622_0000.py
test/: index.html  query.py
